# CasinoAdmin

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  settings.py
.github/workflows/: deploy.yaml  dev_deploy  docker-image.yml
alembic/: env.py
alembic/seeders/: seed_fish_data.py
app/: __init__.py
app/api/admin/: models.py  schema.py  views.py
app/api/agent/: models.py  schema.py  views.py
app/api/auth/: schema.py  views.py
app/api/credit/: models.py  schema.py  views.py
app/api/game/: models.py  schema.py  views.py
app/api/history/: models.py  schema.py  views.py
app/api/user/: models.py  schema.py  views.py
app/endpoints/: routes.py  urls.py
app/games/fish/: fish_game.py  fish_server.py  models.py  schema.py  utils.py
app/rpc/: __init__.py  fish_game.py  gambling.py  game_server
app/rpc/auth/: schema.py  views.py
app/rpc/credit/: schema.py
app/rpc/game/: schema.py  views.py
app/rpc/history/: schema.py  views.py
app/rpc/notification/: schema.py  views.py
app/rpc/user/: schema.py  views.py
app/shared/auth/: auth_handler.py  password_generator.py  password_handler.py  token_handler.py
app/shared/bases/: base_data.py  base_model.py  base_response.py  base_test.py
app/shared/email/: mailgun.py
app/shared/exception/: exceptions.py  utils.py
app/shared/helper/: confluence.py  fix_quota_and_balance.py  give_me_tokens.py  json_from_schema.py  logger.py  rotate_password_schemes.py  (+4 more)
certs/: client.key  client.pem  local.key  local.pem
helm/templates/: app-deployment.yaml  app-service.yaml
(+31 files in other folders)
