[tool.poetry]
name = "casinoadmin"
version = "0.1.0"
description = ""
authors = ["Michael Brown <kurosama112@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.12"
fastapi = "^0.95.1"
FastAPI-SQLAlchemy = "^0.2.1"
sqlalchemy-mixins = "^2.0.0"
fastapi-camelcase = "^1.0.5"
redis = "^4.5.4"
pandas = "^2.0.1"
numpy = "^1.24.3"
faker = "^18.6.0"
pydantic = {extras = ["email"], version = "^1.10.7"}
python-dotenv = "^1.0.0"
twilio = "^8.1.0"
passlib = "^1.7.4"
pyotp = "^2.8.0"
sentry-sdk = "^1.21.1"
celery = "^5.2.7"
itsdangerous = "^2.1.2"
meilisearch = "^0.26.0"
uvicorn = "^0.22.0"
py-linq = "^1.4.0"
psycopg2-binary = "^2.9.6"
fastapi-socketio = "^0.0.10"
socketio = "^0.2.1"
schedule = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
